fix css issue in playing on mobile

--- a/pages/playing/RightColumn.module.scss
+++ b/pages/playing/RightColumn.module.scss
@@ -1,6 +1,5 @@
 .container {
 	flex: 1;
-	width: 52rem;
 }
 
 .content {
